Fix JSON-LD-star expansion